--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "@vitejs/plugin-react": "^4.5.2",
         "framer-motion": "^12.18.1",
         "gsap": "^3.13.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-helmet-async": "^2.0.5",
         "react-icons": "^5.5.0",
         "styled-components": "^6.1.19",
         "swiper": "^11.2.8"
