--- a/render.yaml
+++ b/render.yaml
@@ -47,6 +47,11 @@ services:
           type: web
           name: mobilier-app
           property: url
+      - key: ASSET_URL
+        fromService:
+          type: web
+          name: mobilier-app
+          property: url
       - key: LOG_CHANNEL
         value: errorlog
       - key: LOG_LEVEL
@@ -63,6 +68,8 @@ services:
         value: file
       - key: SESSION_LIFETIME
         value: 120
+      - key: SESSION_SECURE_COOKIE
+        value: true
       - key: BROADCAST_DRIVER
         value: log
       - key: VITE_APP_NAME
