--- a/render.yaml
+++ b/render.yaml
@@ -9,6 +9,9 @@ services:
       # Install Node.js dependencies
       npm install
 
+      # Clean existing build files
+      rm -rf public/build
+
       # Build frontend assets (React + Tailwind)
       npm run build
 
@@ -41,7 +44,7 @@ services:
       - key: APP_ENV
         value: production
       - key: APP_DEBUG
-        value: false
+        value: true
       - key: APP_URL
         fromService:
           type: web
