--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "build": "vite build && vite build --ssr",
+        "preview": "vite preview"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/vite": "^4.0.0",
+        "@vitejs/plugin-react": "^4.5.2",
         "alpinejs": "^3.14.9",
         "autoprefixer": "^10.4.2",
         "axios": "^1.8.2",
@@ -20,7 +22,6 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
-        "@vitejs/plugin-react": "^4.5.2",
         "framer-motion": "^12.18.1",
         "gsap": "^3.13.0",
         "react": "^18.2.0",
