--- a/render.yaml
+++ b/render.yaml
@@ -12,11 +12,24 @@ services:
       # Clean existing build files
       rm -rf public/build
 
+      # Create build directory with proper permissions
+      mkdir -p public/build
+      chmod -R 755 public/build
+
       # Build frontend assets (React + Tailwind)
       ASSET_URL=https://$RENDER_EXTERNAL_HOSTNAME npm run build
 
+      # Ensure build files are accessible
+      chmod -R 755 public/build
+
       # Generate application key if not set
       php artisan key:generate --force
+
+      # Clear all caches first
+      php artisan cache:clear
+      php artisan config:clear
+      php artisan route:clear
+      php artisan view:clear
 
       # Cache configuration for better performance
       php artisan config:cache
@@ -31,6 +44,12 @@ services:
 
       # Create storage link for file uploads
       php artisan storage:link
+
+      # Verify manifest exists
+      if [ ! -f "public/build/manifest.json" ]; then
+        echo "Error: manifest.json not found!"
+        exit 1
+      fi
 
     startCommand: |
       # Start the PHP server
